--- a/GFM/localisation/000_Victoria Universalis.csv
+++ b/GFM/localisation/000_Victoria Universalis.csv
@@ -80,9 +80,13 @@ ENG_1236;West United Provinces;;;;;;;;;;;;;
 ENG_1243;East United Provinces;;;;;;;;;;;;;
 movement_universal_health_care;Universal Health Care Movement;;;;;;;;;;;;;
 acquire_all_cores;Liberate all cores;;;;;;;;;;;;;
+acquire_all_cores_native;Liberate all cores;;;;;;;;;;;;;
 acquire_all_cores_desc;Liberate your country from its oppressors;;;;;;;;;;;;;
+acquire_all_cores_native;Liberate your claims from its oppressors;;;;;;;;;;;;;
 acquire_all_cores_setup;Acquires $STATE$;;;;;;;;;;;;;
+acquire_all_cores_native_setup;Acquires $STATE$;;;;;;;;;;;;;
 acquire_all_cores_short;Acquires $STATE$;;;;;;;;;;;;;
+acquire_all_cores_native_short;Acquires $STATE$;;;;;;;;;;;;;
 acquire_small_state;Acquire small state;;;;;;;;;;;;;
 acquire_small_state_setup;Acquire $STATE$;;;;;;;;;;;;;
 acquire_small_state_short;Acquire $STATE$ from $RECIPIENT$;;;;;;;;;;;;;
