--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -173,13 +173,13 @@ great_moravia_larp_get_help_desc;§RGain 25 infamy.§! Europe has been shook by th
 PRAGUEUPRDEFEAT;We have successfully managed to defeat the Czechs with a final bombardment of the rebels in Prague's Old Town. Their cause is subdued for the time being and we can focus our attention elsewhere.;;;;;;;;;;;;;
 big_belarus_letsgo_title;Claim Greater Belarus;;;;;;;;;;;;;
 big_belarus_letsgo_desc;We hold the core of the White Ruthenian nation, yet there are more of us beyond our borders, shackled and oppressed by foreign powers. If our nation is to truly awake, it must be whole!;;;;;;;;;;;;;
-CHE;Indian Confederacy;;;;;;;;;;;;;
+CHE;Cherokee;;;;;;;;;;;;;
 CHE_colonial_company;Indian Territory;;;;;;;;;;;;
 CHE_colonial_company_2;United Indian Nations;;;;;;;;;;;;
-CHE_ADJ;Indian;;;;;;;;;;;;;
+CHE_ADJ;Cherokee;;;;;;;;;;;;;
 cavalry;Lancer;;;;;;;;;;;;;
 cavalry_short;Lan;;;;;;;;;;;;;
-INL;Indian Lands;;;;;;;;;;;;;
+INL;Indian Confederacy;;;;;;;;;;;;;
 INL_ADJ;Indian;;;;;;;;;;;;;
 reclaim_indian_territory_title;Reclaim Indian Territory;;;;;;;;;;;;;
 reclaim_indian_territory_desc;The government in Washington has created the Indian Territory to be the land where we may live without the intrusions of colonists. However, greed compelled the pale face to chip away at this territory at any time he deemed it beneficial for himself. Justice compels us to remind him of the original promise he made to us!;;;;;;;;;;;;;
