--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10423,7 +10423,7 @@ PROV2272;Coro;Coro;Coro;;Coro;;;;;;;;;
 PROV2273;Barquisimeto;Barquisimeto;Barquisimeto;;Barquisimeto;;;;;;;;;
 PROV2274;Barinas;Barinas;Barinas;;Barinas;;;;;;;;;
 PROV2275;Waiomgomo;Waiomgomo;Waiomgomo;;Waiomgomo;;;;;;;;;
-PROV2276;Tucupita;Tucupita;Tucupita;;Tucupita;;;;;;;;;
+PROV2276;Maturín;Maturín;Maturín;;Maturín;;;;;;;;;
 PROV2277;Huottöja;Huottöja;Huottöja;;Huottöja;;;;;;;;;
 PROV2278;San Fernando de Atabapo;San Fernando de Atabapo;San Fernando de Atabapo;;San Fernando de Atabapo;;;;;;;;;
 PROV2279;Quito;Quito;Quito;;Quito;;;;;;;;;
