--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -123,7 +123,7 @@ PROV2343;San Pedro;;;;;;;;;
 PROV4076;Ilha de Bragança;;;;;;;;;
 PROV4093;Quili Malal;;;;;;;;;
 PROV4027;Oporto;;;;;;;;;
-PROV518;Braga;;;;;;;;;
+PROV518;Porto;;;;;;;;;
 PROV4026;Coimbra;;;;;;;;;
 PROV4028;Guarda;;;;;;;;;
 PROV4025;Portalegre;;;;;;;;;
