--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -122,11 +122,11 @@ PROV2342;Villarrica;;;;;;;;;
 PROV2343;San Pedro;;;;;;;;;
 PROV4076;Ilha de Bragança;;;;;;;;;
 PROV4093;Quili Malal;;;;;;;;;
-PROV4027;Oporto;;;;;;;;;
+PROV4027;Chaotung;;;;;;;;;
 PROV518;Porto;;;;;;;;;
 PROV4026;Coimbra;;;;;;;;;
-PROV4028;Guarda;;;;;;;;;
-PROV4025;Portalegre;;;;;;;;;
+PROV4028;Preah Sihanouk;;;;;;;;;
+PROV4025;Kampong Thom;;;;;;;;;
 PROV522;Leiria;;;;;;;;;
 PUR;Purran;;;;;;;;;
 PUR_ADJ;Tshoneka;;;;;;;;;
