--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -1215,6 +1215,7 @@ asli;Asli;;;;;;;;;;;;;
 bahnaric;Bahnaric;;;;;;;;;;;;;
 katuic;Katuic;;;;;;;;;;;;;
 pearic;Pearic;;;;;;;;;;;;;
+mnong;Mnong;;;;;;;;;;;;;
 nanai;Nanai;;;;;;;;;;;;;
 udege;Udege;;;;;;;;;;;;;
 ket;Ket;;;;;;;;;;;;;
@@ -9690,7 +9691,7 @@ PROV1361;Savannakhet;Savannakhet;Savannakhet;;Savannakhet;;;;;;;;;
 PROV1362;Salavan;Salavan;Salavan;;Salavan;;;;;;;;;
 PROV1365;Chanthaburi;Chanthaburi;Chanthaburi;;Chanthaburi;;;;;;;;;
 PROV1366;Battambang;Battambang;Battambang;;Bãtdâmbâng;;;;;;;;;
-PROV1367;Kampot;Kampot;Kampot;;Kampot;;;;;;;;;
+PROV1367;Prey Nob;Prey Nob;Prey Nob;;Prey Nob;;;;;;;;;
 PROV1368;Stongtreng;Stongtreng;Stongtreng;;Stongtreng;;;;;;;;;
 PROV1369;Hà Nôi;Hà Nôi;Hà Nôi;;Hà Nôi;;;;;;;;;
 PROV1370;Hài Phòng;Hài Phòng;Hài Phòng;;Hài Phòng;;;;;;;;;
