--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -754,7 +754,7 @@ EVTDESC23456245;\n\nWithout a land connection to Petrich, the owners of Sofia ha
 EVTDESC23456246;\n\nWithout a land connection to Kardzali, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
 EVTDESC23456247;\n\nWithout a land connection to Kardzali, the owners of Stara Zagora have taken it over.;;;;;;;;;;;;;
 EVTDESC123634;\n\nWithout a land connection to Coto, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
-EVTDESC123633;\n\nWithout a land connection to Coto, the owners of Panama have taken it over.;;;;;;;;;;;;;
+EVTDESC123633;\n\nWithout a land connection to Coto, the owners of San Jose have taken it over.;;;;;;;;;;;;;
 EVTDESC123630;\n\nDuring one of his increasingly frequent drunken rides on his horsewaggon, today president Franklin Pierce carelessly ran over an old lady. He was arrested but released free of charge.;;;;;;;;;;;;;
 EVTDESC123489;\n\nA French company has discovered large copper deposits in the area around Bor.;;;;;;;;;;;;;
 EVTDESC123490;\n\nThe fervor of the murder of a sergeant has spiralled into a full-blown uprising across Madagascar threatening to seize the entire island.;;;;;;;;;;;;;
