fixed the only event without \n\n

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2888,3 +2888,4 @@ NEWECHOTANO;\n\nThe Cherokee have refused to move west, and the only way to get 
 create_indian_confederacy_player_title;Unite the Turtle Islanders by Force;;;;;;;;;;;;;
 create_indian_confederacy_player_desc;We have no other choice but to invade our neighbours and expand to face the American oppression of our people once and for all.;;;;;;;;;;;;;
 THEYDIDITMALONES;\n\nAfter skirmishes between Argentinian local militias and our forces in the east of our lands, the colonists have taken Calfuleufú and Thavlil from our brothers and sisters.;;;;;;;;;;;;;
+BANANKOROFEELSTHREATENED;\n\nBanankoro has asked us for protection, as they are feeling encroached by the expeditions of our forces in Guinea.;;;;;;;;;;;;;
