--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1390,7 +1390,7 @@ edict_of_toleration_desc;The Catholic Church, in addition to the various Protest
 the_merry_monarch;The Merry Monarch;;;;;;;;;;;;
 the_merry_monarch_desc;King Kalakaua enjoys considerable popularity among the people, and his ambitions for a greater Polynesian kingdom might take our nation to new heights?;;;;;;;;;;;;
 the_prince_of_the_people;The Prince of the People;;;;;;;;;;;;
-the_prince_of_the_people_desc;King Kalaniana?ole enjoys a large amount of popular support due to his promotion of traditional Hawaiian cultural policies, as well as his steadfast protection of the Hawaiian language;;;;;;;;;;;;
+the_prince_of_the_people_desc;King Kalaniana'ole enjoys a large amount of popular support due to his promotion of traditional Hawaiian cultural policies, as well as his steadfast protection of the Hawaiian language;;;;;;;;;;;;
 first_red_scare;The First Red Scare;;;;;;;;;;;;
 first_red_scare_desc;The federal government has embarked on a covert campaign against communist and soocialist influences in our nation through the creation of the Radical Division. Headed by Director John Edgar Hoover, the Division seeks to destroy communist infiltration internal and external.;;;;;;;;;;;;
 PROV3589;Las Cruces;;;;;;;;;;;;
@@ -2889,3 +2889,5 @@ create_indian_confederacy_player_title;Unite the Turtle Islanders by Force;;;;;;
 create_indian_confederacy_player_desc;We have no other choice but to invade our neighbours and expand to face the American oppression of our people once and for all.;;;;;;;;;;;;;
 THEYDIDITMALONES;\n\nAfter skirmishes between Argentinian local militias and our forces in the east of our lands, the colonists have taken Calfuleufú and Thavlil from our brothers and sisters.;;;;;;;;;;;;;
 BANANKOROFEELSTHREATENED;\n\nBanankoro has asked us for protection, as they are feeling encroached by the expeditions of our forces in Guinea.;;;;;;;;;;;;;
+turtle_islanders;Defenders of Turtle Island;;;;;;;;;;;;;
+turtle_islanders_desc;We must move to defend from the foreign invaders that occupy our lands.;;;;;;;;;;;;;
