--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -140,7 +140,7 @@ selknam;Selknam;;;;;;;;;;;;;
 yaghan;Yaghan;;;;;;;;;;;;;
 haush;Haush;;;;;;;;;;;;;
 houma;Houma;;;;;;;;;;;;;
-biloxi;Biloxi;;;;;;;;;;;;;
+biloxi_culture;Biloxi;;;;;;;;;;;;;
 tunica;Tunica;;;;;;;;;;;;;
 chitimacha;Chitimacha;;;;;;;;;;;;;
 natchez;Natchez;;;;;;;;;;;;;
