--- a/GFM/localisation/00000_Garcia_1830.csv
+++ b/GFM/localisation/00000_Garcia_1830.csv
@@ -5,7 +5,7 @@ EVTNAME183536;Las Siete Leyes;;;;;;;;;;;;;
 EVTDESC183536;\n\nOur president's government has issued a new constitution called the 'Siete Leyes'. It replaces the constitution of 1824 and establishes the Centralist Republic of Mexico, a unitary state, strengthening the government in Mexico City. The federal system was originally implemented to emulate the success of the US, but evidently, as seen by the political turmoil and civil wars our country has experienced in the last decade, the federal system was a mistake.;;;;;;;;;;;;;
 EVTOPTA183536;Viva México!;;;;;;;;;;;;;
 EVTNAME183637;Separatist Movements Arise!;;;;;;;;;;;;;
-EVTDESC183637;\n\nReports claim that, in response to the political instability and conflict amongst liberals and conservatives ? with support from the Americans and with an explicit desire to preserve the institution of slavery ?, the Texans declaring independence.;;;;;;;;;;;;;
+EVTDESC183637;\n\nReports claim that, in response to the political instability and conflict amongst liberals and conservatives - with support from the Americans and with an explicit desire to preserve the institution of slavery -, the Texans are declaring independence.;;;;;;;;;;;;;
 EVTOPTA183637;Fight those rebels! Defend the constitution!;;;;;;;;;;;;;
 EVTOPTB183637;This is hopeless. There is nothing we can do.;;;;;;;;;;;;;
 EVT44127OPTA;Our military could use the target practice.;;;;;;;;;;;;;
