all but text.csv fixed

--- a/GFM/localisation/00_GSG_countries.csv
+++ b/GFM/localisation/00_GSG_countries.csv
@@ -83,8 +83,8 @@ HNS_democracy;Hanseatic League;;;;;;;;;;;;;
 HNS_presidential_dictatorship;Hanseatic League;;;;;;;;;;;;;
 HNS_proletarian_dictatorship;Hanseatic Free Republic;;;;;;;;;;;;;
 HNS_fascist_dictatorship;Hanseatic State;;;;;;;;;;;;;
-SIO_liberal;Keetoowah Society;SociÈt?EKeetoowah;Keetoowah Society;;Sociedad de Keetoowah ;;;;;;;;;
-SIO_liberal;Keetoowah Society;SociÈtùEKeetoowah;Keetoowah Society;;Sociedad de Keetoowah ;;;;;;;;;
+SIO_liberal;Keetoowah Society;SociÈtÈ Keetoowah;Keetoowah Society;;Sociedad de Keetoowah;;;;;;;;;
+SIO_liberal;Keetoowah Society;SociÈtÈ Keetoowah;Keetoowah Society;;Sociedad de Keetoowah;;;;;;;;;
 SIO_conservative;Traditional Party;Parti traditionnel;Traditional Party;;Partido Tradicional;;;;;;;;;
 SIO_conservative_2;National Party;Parti national;National Party;;Partido Nacional;;;;;;;;;
 SIO_socialist;Social Party;Parti social;Social Party;;Partido Social;;;;;;;;;
@@ -179,7 +179,7 @@ SER_anarcho_liberal;Narodna Radikalna Stranka;;;;;;;;;;;;;
 YUG_anarcho_liberal;Narodna Radikalna Stranka;;;;;;;;;;;;;
 EST_anarcho_liberal;Radikaal-Demokraatlik Erakond;;;;;;;;;;;;;
 LIV_anarcho_liberal;Latvijas Radikaldemokratu Partija;;;;;;;;;;;;;
-LIT_anarcho_liberal;Tautos Pa?angos Partija;;;;;;;;;;;;;
+LIT_anarcho_liberal;Tautos Paûangos Partija;;;;;;;;;;;;;
 KOR_anarcho_liberal;Geubjinpa;;;;;;;;;;;;;
 HAI_anarcho_liberal;Parti Radical;;;;;;;;;;;;;
 CRO_anarcho_liberal;Anarhisticki Partija;;;;;;;;;;;;;
