--- a/GFM/localisation/00_SAF_Misc.csv
+++ b/GFM/localisation/00_SAF_Misc.csv
@@ -97,7 +97,7 @@ EVTDESC6100;\n\nThe town of Asmara first began to grow in importance when it gov
 EVT6100OPTA;Avanti Italia!;;;;;;;;;;;;;
 EVTNAME6101;Tripoli Grand Prix;;;;;;;;;;;;;
 EVTDESC6101;\n\nEarly motorsports were embraced enthusiastically by many Italians, perhaps due to the country being home to many producers of high-performance automobiles. Trying to capitalize on this popularity, the colonial government of Italian Tripolitania sponsored the Tripoli grand prix, in the hopes that it would bring tourism and consequently, lead to more Italians settling there. The grand prix soon ran into financial trouble and was nearly cancelled. However, the president of Tripoli's auto club, Egidio Sforzini, had a state-of-the-art 13 kilometer track built with a grandstand that could hold 10000 people, and amenities to rival any course in Europe. The Tripoli Grand Prix rebounded to became one of the biggest racing events in the world, and saw several renowned racing greats such as Achille Varzi and Hermann Lang on its track.;;;;;;;;;;;;;
-EVT6101OPTA;Il Bisogno di Velocit?;;;;;;;;;;;;;
+EVT6101OPTA;Il Bisogno di Velocità;;;;;;;;;;;;;
 EVTNAME6022;Voorste Mense;;;;;;;;;;;;;
 EVTDESC6022;\n\nBefore great numbers of Boers departed from the Cape on the Great Trek, there were a few brave souls who ventured into the interior of Southern Africa in small groups and founded communities far from any colonial authority. One such settlement was Zoutpansberg, "Saltpan Mountain", founded by exiled farmer Louis Tregardt, soon joined by the clans of Hendrik Potgieter and Hans van Rensburg. These early Voortrekkers were known as "Voorste Mense", "First men". Even prior to these pioneers was Coenraad de Buys, a mysterious figure who fled the Cape in 1795, and by the time the Trekkers encountered him near Zoutpansberg, he was patriarch of a "half-caste clan" of several hundred people, many his own children by local women. These mountain communities remained very insular from both the natives and the Boer republics.;;;;;;;;;;;;;
 EVT6022OPTA;A promised land in the wilderness.;;;;;;;;;;;;;
@@ -122,7 +122,7 @@ EVTNAME6031;Petition Portugal For Access to Their Ports;;;;;;;;;;;;;
 EVTDESC6031;\n\nOur young nation of $COUNTRY$ sits at a disadvantage in trade with no access to the sea, not to mention the difficulty for potential immigrants have in reaching us to help settle our new frontiers; however Portugal has a colony right next door on the coast of Mozambique. Perhaps we can strike a deal with Portugal where they will allow us access to their ports so we may better facilitate trade and immigration.;;;;;;;;;;;;
 EVT6031OPTA;Let us contact Portugal;;;;;;;;;;;;;
 EVTNAME6032;Port treaty with Transvaal?;;;;;;;;;;;;;
-EVTDESC6032;\n\nWe have received a communiqu? from the South African Republic asking for access to our port in Lourenço Marques, they have even offered to financially compensate us directly as well as pay for all infrastructure connections from our port to their border. Should we go through with this deal and allow their merchants direct access to our port?;;;;;;;;;;;;;
+EVTDESC6032;\n\nWe have received a communiqué from the South African Republic asking for access to our port in Lourenço Marques, they have even offered to financially compensate us directly as well as pay for all infrastructure connections from our port to their border. Should we go through with this deal and allow their merchants direct access to our port?;;;;;;;;;;;;;
 EVT6032OPTA;This will benefit us both, we agree!;;;;;;;;;;;;;
 EVT6032OPTB;This will weaken our control over the region, we refuse!;;;;;;;;;;;;;
 EVTNAME6033;Portugal has accepted our port access proposal;;;;;;;;;;;;;
@@ -183,7 +183,7 @@ EVTDESC6051;\n\nCecil Rhodes, the current Governor of the Cape, had a vision to 
 EVT6051OPTA;Turn the raiders over to Britain for trial.;;;;;;;;;;;;;
 EVT6051OPTB;Execute the lot of them!;;;;;;;;;;;;;
 EVTNAME6052;The Kruger Telegram;;;;;;;;;;;;;
-EVTDESC6052;\n\nThe Boers have manage to repulse an incursion into their sovereign nations by a British raiding party lead by  Cecil Rhodes and Leander Starr Jameson. Should we show solidarity with the Boer states?  This would greatly increase our relations and influence with them, but at the expense of our relations with the British.;;;;;;;;;;;;;
+EVTDESC6052;\n\nThe Boers have manage to repulse an incursion into their sovereign nations by a British raiding party lead by  Cecil Rhodes and Leander Starr Jameson. Should we show solidarity with the Boer states? This would greatly increase our relations and influence with them, but at the expense of our relations with the British.;;;;;;;;;;;;;
 EVT6052OPTA;Yes! Send the telegram from our Kaiser to congratulate them!;;;;;;;;;;;;;
 EVT6052OPTB;We value our relations with the British more.;;;;;;;;;;;;;
 EVTNAME6053;The ZAR-Oranje-Vrystaat Alliance;;;;;;;;;;;;;
@@ -211,7 +211,7 @@ EVT6060OPTA;The Boer Republics have a right to self-determination, we will fight
 EVT6060OPTB;This isn't out fight.;;;;;;;;;;;;;
 griqua;Cape Colored;;;;;;;;;;;;;
 claim_namibia_title;Settle Namibia;;;;;;;;;;;;;
-claim_namibia_desc;The sparsely inhabited lands of Namibia to our North-West have begun to attract the attention of the Great Powers, and we may soon find an aggressive colonial power moving in next door. It is critical for the maintenance of our national security that we take this area to prevent this. Of particular interest is the bay called Angra Pequena by the Portuguese, as a hanseatic merchant from Hamburg named Adolf L?deritz has expressed interest in a partnership with our colonial company to settle the area.;;;;;;;;;;;;;
+claim_namibia_desc;The sparsely inhabited lands of Namibia to our North-West have begun to attract the attention of the Great Powers, and we may soon find an aggressive colonial power moving in next door. It is critical for the maintenance of our national security that we take this area to prevent this. Of particular interest is the bay called Angra Pequena by the Portuguese, as a hanseatic merchant from Hamburg named Adolf Lüderitz has expressed interest in a partnership with our colonial company to settle the area.;;;;;;;;;;;;;
 move_capital_title;A Capital for our Nation;;;;;;;;;;;;;
 move_capital_desc;Though our government is situated well enough as it is, perhaps a new location would be more fitting for our new situation?;;;;;;;;;;;;;
 greater_south_africa_title;Greater South Africa;;;;;;;;;;;;;
