--- a/GFM/localisation/0_Names.csv
+++ b/GFM/localisation/0_Names.csv
@@ -1,5 +1,4 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;Portuguese;Russian;Finnish;
-#translate notes;x = EN, FR, DE, IT controlled;y = as well as ES, PL, RU;z = ?and PT;;;;;;;;;;;
 AAA;The Observer;L'Observateur;Der Beobachter;Obserwator;El Observador;L'Osservatore;A megfigyelõ;Pozorovatel;A megfigyelõ;De waarnemer;O observador;Íàáëşäàòåëü;Tarkkailija;
 AAA_ADJ;Observing;Observante;Beobachtend;Obserwowaæ;Observante;Osservante;megfigyelése;Pozorování;megfigyelése;Observeren;Observando;Íàáëşäàòåëÿ;tarkkailemalla;
 AAA_PARTY;The Observing Faction;La faction observatrice;Die beobachtende Fraktion;Frakcja obserwuj¹ca;La facción observadora;La Fazione che Osserva;A megfigyelõ frakció;Pozorovací frakce;A megfigyelõ frakció;De waarnemende factie;A Facção Observadora;Ôğàêöèÿ Íàáëşäàòåëåé;Tarkkaileva ryhmä;
@@ -31,7 +30,7 @@ ALH;Haasa;Haasa;Haasa;Al Hasa;Haasa;Haasa;Haasa;Haasa;Haasa;Haasa;Haasa;Õàñà;Haa
 ALH_ADJ;Haasa;d'Haasa;Haasa-;Al Hasy;Haasa;di Haasa;Haasa;Haasa;Haasa;Haasa;Haasa;Õàññê.;Haasa;
 ALI;the Alien Invaders;Les Envahisseurs Aliens;Die Ausländischen Einfäller;Alien Invaders;Invasores alienígenas;Gli Invasori Alieni;Alien Invaders;Alien Invaders;Alien Invaders;Alien Invaders;Invasores estrangeiros;Èíîïëàíåòíûå Çàõâàò÷èêè;Alien Invaders;
 ALI_ADJ;Alien;Alien;Ausländer;obcy;extranjero;Aliena;idegen;cizinec;idegen;vreemdeling;alienígena;Èíîïëàíåòÿíèí;ulkomaalainen;
-ALI_radical;Grey Faction;Faction des Gris;Fraktion der Grauen;Gray Faction;Grey Faction;Fazione Grigia;Szürke frakció;?edá frakce;Szürke frakció;Gray Faction;Faction Gris;Ñåğàÿ Ôğàêöèÿ;Harmaa Faction;
+ALI_radical;Grey Faction;Faction des Gris;Fraktion der Grauen;Gray Faction;Grey Faction;Fazione Grigia;Szürke frakció;Šedá frakce;Szürke frakció;Gray Faction;Faction Gris;Ñåğàÿ Ôğàêöèÿ;Harmaa Faction;
 ALI_communist;Exploit Faction;Faction de l'Exploit;Fraktion der Ausbeutung;Frakcja Exploit;Facción de la explotación;Fazione Sfruttamento;Az Exploit frakciója;Frakce vıvoje;Az Exploit frakciója;Faction of the Exploit;Faction of the Exploit;Èñïîëüçîâàòü Ôğàêöèş;Exploitin fraktio;
 ALI_conservative;Green Faction;Faction des Verts;Fraktion der Grünen;Frakcja Zielonych;Facción de los Verdes;Fazione Verde;A Zöldek frakciója;Frakce zelenıch;A Zöldek frakciója;Faction of the Greens;Faction of the Greens;Çåëåíàÿ Ôğàêöèÿ;Vihreiden fraktio;
 ALI_fascist;Synthetic Faction;Faction des Synthétiques;Fraktion der Syntheten;Frakcja Syntetycznych;Facción de los Sintéticos;Fazione Sintetica;A Szintetikus frakciója;Frakci syntetiky;A Szintetikus frakciója;Faction of the Synthetics;Faction of the Synthetics;Ôğàêöèÿ ×åğíîé Äûğû;Synteettisistä fraktio;
@@ -85,25 +84,25 @@ AZT;The Aztec;Les Aztèques;Die Azteken;Aztekowie;Los Aztecas;Gli Aztechi;az azté
 AZT_ADJ;Aztec;Aztèque;Aztekisch;Azteków;Azteca;Azteca;azték;aztéckı;azték;Aztec;asteca;Àöòåêñê.;aztec;
 BARB_radical;The Hunnic Faction;Faction Hunnique;Hunnische Fraktion;The Hunnic Faction;La facción Hunnic;Fazione degli Unni;A hunnik frakció;Hunní frakce;A hunnik frakció;The Hunnic Faction;The Hunnic Faction;Ôóíäàìåíò Õóííè;Hunnic Faction;
 BARB_communist;The Scythian Faction;Faction Scythe;Skythische Fraktion;Frakcja scytyjska;La facción escita;Fazione degli Sciti;A szkítikus frakció;Scythian frakce;A szkítikus frakció;De Scythische factie;A facção cítia;Ñêèôñêàÿ ôğàêöèÿ;Scythian fraktio;
-BARB_conservative;Wodan?s Faction;Faction de Wodan;Wodans Fraktion;Frakcja Wodana;Facción de Wodan;Fazione di Odino;Wodan frakciója;Wodanova frakce;Wodan frakciója;Wodan's Faction;A facção de Wodan;Ôğàêöèÿ Âîäàíà;Wodanin fraktio;
+BARB_conservative;Wodan's Faction;Faction de Wodan;Wodans Fraktion;Frakcja Wodana;Facción de Wodan;Fazione di Odino;Wodan frakciója;Wodanova frakce;Wodan frakciója;Wodan's Faction;A facção de Wodan;Ôğàêöèÿ Âîäàíà;Wodanin fraktio;
 BARB_conservative_2;The Gothic Faction;Faction Gothique;Gotische Fraktion;Gothic Faction;La facción gótica;Fazione dei Goti;A gótikus frakció;Gotická frakce;A gótikus frakció;De gotische factie;A facção gótica;Ãîòè÷åñêàÿ ôğàêöèÿ;Goottilainen fraktio;
 BARB_conservative_3;The Lombard Faction;Faction Lombarde;Lombardische Fraktion;The Lombard Faction;La facción lombarda;Fazione dei Longobardi;A Lombard Frakció;Lombardská frakce;A Lombard Frakció;De Lombard-factie;A facção lombarda;Ëîìáàğäíàÿ ôğàêöèÿ;Lombard-fraktio;
 BARB_fascist;The Party of the Dux;Le Parti du Dux;Die Partei des Duxen;Partia Dux;La fiesta del Dux;Partito dei Duci;A Dux pártja;Strana Dux;A Dux pártja;De partij van de Dux;O Partido do Dux;Ïàğòèÿ Äóêñà;Duxin puolue;
 BARB_liberal;The Party of Belisarius;Le Parti de Bélisaire;Die Partei von Belisarius;Partia Belizariusza;La fiesta de Belisario;Partito di Belisario;Belisarius pártja;Strana Belisarius;Belisarius pártja;De partij van Belisarius;O Partido de Belisário;Ïàğòèÿ Âåëèçàğèÿ;Belisariuksen puolue;
 BARB_liberal_2;The Party of Totila;Le Parti de Totila;Die Partei von Totila;Partia Totila;La fiesta de Totila;Partito di Totila;A Totila pártja;Strana Totila;A Totila pártja;De partij van Totila;O Partido de Totila;Ïàğòèÿ Òîòèëà;Totilan puolue;
 BARB_liberal_3;The Party of Karl;Le Parti de Charles;Die Partei von Karl;Partia Karola;La fiesta de Karl;Partito di Carlo;Karl pártja;Strana Karla;Karl pártja;De partij van Karl;O Partido de Karl;Ïàğòèÿ Êàğëà;Karlin puolue;
-BARB_reactionary;Old Customs? Faction;Les Anciennes M?urs;Fraktion der alten Sitten;Stara Frakcja Celna;Facción de Old Customs;Fazione dei Costumi Antichi;Régi Vámok Frakciója;Fráze starıch celníkù;Régi Vámok Frakciója;De factie van de oude douane;Faculdade de Alfândega antiga;Ñòàğàÿ òàìîæåííàÿ ôğàêöèÿ;Vanhan tullin fraktio;
+BARB_reactionary;Old Customs' Faction;Les Anciennes Mœurs;Fraktion der alten Sitten;Stara Frakcja Celna;Facción de Old Customs;Fazione dei Costumi Antichi;Régi Vámok Frakciója;Fráze starıch celníkù;Régi Vámok Frakciója;De factie van de oude douane;Faculdade de Alfândega antiga;Ñòàğàÿ òàìîæåííàÿ ôğàêöèÿ;Vanhan tullin fraktio;
 BARB_socialist;The Red Horde;La Horde Rouge;Die Rote Horde;Czerwona Horda;La Horda Roja;L'Orda Rossa;A Vörös Horda;Èervená horda;A Vörös Horda;De rode horde;A Horda Vermelha;Êğàñíàÿ Îğäà;Punainen Horde;
 BARB_socialist_2;The Red Senate;Le Sénat Rouge;Der Rote Senat;Czerwony Senat;El Senado rojo;Il Senato Rosso;A Vörös Szenátus;Èervenı senát;A Vörös Szenátus;De rode senaat;O Senado Vermelho;Êğàñíûé Ñåíàò;Punainen senaatti;
 BARB_socialist_3;The Red Faction;La Faction Rouge;Die Rote Fraktion;Czerwona frakcja;La facción roja;La Fazione Rossa;A Red Faction;Èervená frakce;A Red Faction;De rode factie;The Red Faction;Êğàñíàÿ ôğàêöèÿ;Red Faction;
 BBD;Barbados;La Barbade;Barbados;Barbados;Barbados;Barbados;Barbados;Barbados;Barbados;Barbados;Barbados;Áàğáàäîñ;Barbados;
-BBD_ADJ;Barbadian;Barbadien;Barbadisch;Barbadia;Barbadense;Barbadiana;barbadosi;Barbad?skı;barbadosi;Barbadaans;Barbadense;Áàğáàäîññê.;Barbadoksen;
+BBD_ADJ;Barbadian;Barbadien;Barbadisch;Barbadia;Barbadense;Barbadiana;barbadosi;Barbadöskı;barbadosi;Barbadaans;Barbadense;Áàğáàäîññê.;Barbadoksen;
 BER;Beroda;Béroda;Beroda;Beroda;Beroda;Beroda;Beroda;Beroda;Beroda;Beroda;Baroda;Áåğîäà;Beroda;
 BER_ADJ;Berodan;Bérodien;Beroda-;Berodan;Berodan;Berodana;Berodan;Berodan;Berodan;Berodan;Berodan;Áåğîäàí;Berodan;
 BGL;Bagelkhand;Bagelkhand;Baghelkhand;Bagelkhand;Bagelkhand;Bagelkhand;Bagelkhand;Bagelkhand;Bagelkhand;Bagelkhand;Bagelkhand;Áàãåëêõàíä;Bagelkhand;
 BGL_ADJ;Bagelkhandi;du Bagelkhand;Baghelkhand-;Bagelkhandi;Bagelkhandi;del Bagelkhand;Bagelkhandi;Bagelkhandi;Bagelkhandi;Bagelkhandi;Bagelkhandi;Áàãåëêõàíäè;Bagelkhandi;
-BIJ;Bijapur;Bijapur;Bijapur;Bid?apur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Áèäæàïóğ;Bijapur;
-BIJ_ADJ;Bijapuri;de Bijapur;Bijapur-;Bid?apuru;Bijapur;del Bijapur;Bijapuri;Bijapuri;Bijapuri;Bijapuri;Bijapuri;Áèäæàïóğñê.;Bijapuri;
+BIJ;Bijapur;Bidjapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Áèäæàïóğ;Bijapur;
+BIJ_ADJ;Bijapuri;Bidjapur;Bijapur;Bijapur;Bijapur;del Bijapur;Bijapuri;Bijapuri;Bijapuri;Bijapuri;Bijapuri;Áèäæàïóğñê.;Bijapuri;
 BLA;Blackfoot;Pieds-Noirs;Schwarzfuß;Czarne Stopy;Pies Negros;Piedi-Neri;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Blackfoot;×åğíîíîãèå;Blackfoot;
 BLA_ADJ;Blackfoot;des Pieds-Noirs;Schwarzfuß-;Czarnych Stóp;Pies Negros;dei Piedi-Neri;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Blackfoot;×åğíîíîã;Blackfoot;
 BLM;Blambangan;Blambangan;Blambangan;Blambangan;Blambangan;Blambangan;Blambagan;Blambagan;Blambagan;Blambagan;Blambangan;Áëàìáàíãàí;Blambagan;
@@ -168,8 +167,8 @@ DAU;Dauphiné;Dauphiné;Delfinat;Delfinat;Delfinado;Delfinato;Dauphiné;Dauphiné;Da
 DAU_ADJ;Dauphiné;Dauphinais;Delfinat-;Delfinatu;Delfinada;Delfinese;Dauphiné;Dauphiné;Dauphiné;Dauphiné;Dauphiné;Äîôèíñê.;Dauphiné;
 DEC;Deccan;Deccan;Dekkan;Dekan;Deccan;Deccan;Dekkán;Deccan;Dekkán;Deccan;Decã;Äåêàí;Deccan;
 DEC_ADJ;Deccan;Deccanais;Dekkan-;Dekanu;Deccani;del Deccan;Dekkán;Deccan;Dekkán;Deccan;Deccan;Äåêàíñê.;Deccan;
-DJI;Djibouti;Djibouti;Dschibuti;D¿ibuti;Djibouti;Gibuti;Dzsibuti;D?ibuti;Dzsibuti;Djibouti;Djibouti;Äæèáóòè;Djibouti;
-DJI_ADJ;Djibouti;Djiboutien;Dschibutisch;D¿ibuti;Djibouti;Gibutiana;Dzsibuti;D?ibuti;Dzsibuti;Djibouti;Djibouti;Äæèáóòè;Djibouti;
+DJI;Djibouti;Djibouti;Dschibuti;D¿ibuti;Djibouti;Gibuti;Dzsibuti;Djibuti;Dzsibuti;Djibouti;Djibouti;Äæèáóòè;Djibouti;
+DJI_ADJ;Djibouti;Djiboutien;Dschibutisch;D¿ibuti;Djibouti;Gibutiana;Dzsibuti;Djibuti;Dzsibuti;Djibouti;Djibouti;Äæèáóòè;Djibouti;
 DKU;The Don-Kuban Union;L'Union du Don-Kouban;Die Don-Kuban-Union;Unia Don-Kuban;La Unión Don-Kuban;Unione Don-Kuban;A Don-Kuban Unió;Don-Kubanská unie;A Don-Kuban Unió;De Don-Kuban Unie;União Don-Kuban;Äîí-Êóáàíñêèé ñîşç;Don-Kuban-unioni;
 DKU_ADJ;Don-Kuban;Don-Koubannais;Don-Kuban-;Don-Kuban;Don-Kuban;del Don-Kuban;Don-Kuban;Don-Kuban;Don-Kuban;Don-Kuban;Don-Kuban;Äîí-Êóáàíü;Don-Kuban;
 DLH;Delhi;Délhi;Delhi;Delhi;Delhi;Delhi;Delhi;Delhi;Delhi;Delhi;Delí;Äåëè;Delhi;
@@ -237,8 +236,8 @@ GRH_democracy;The Great Republic;La Grande République;Der Großen Republik;Republ
 GRH_democracy_ADJ;Great Republic;de la Grande République;Groß' Republik-;Wielka Rzeczpospolita;Gran república;della Grande Repubblica;nagy Köztársaság;skvelé Republic;nagy Köztársaság;grote Republiek;Grande república;Âåëèêàÿ Ğåñïóáëèêà;suuri tasavalta;
 GRJ;Garjat;Gardjat;Gardjat;Garjat;Garjat;Garjat;Garjat;Garjat;Garjat;Garjat;Garjat;Ãàğüÿò;Garjat;
 GRJ_ADJ;Garjat;du Gardjat;Gardjat-;Garjatu;Garjati;di Garjat;Garjat;Garjat;Garjat;Garjat;Garjat;Ãàğüÿòñê.;Garjat;
-GUJ;Gujarat;Gujarat;Gujarat;Gud?arat;Gujarat;Gujarat;Gujarat;Gujarat;Gujarat;Gujarat;Gujaráti;Ãóäæàğàò;Gujaratin;
-GUJ_ADJ;Gujarati;Gujarati;Gujarati;Gud?aratu;Gujarat;del Gujarat;gudzsaráti;gujarati;gudzsaráti;Gujarati;Gujarati;Ãóäæàğàòñê.;gujarati;
+GUJ;Gujarat;Gujarat;Gujarat;Gudjarat;Gujarat;Gujarat;Gujarat;Gujarat;Gujarat;Gujarat;Gujaráti;Ãóäæàğàò;Gujaratin;
+GUJ_ADJ;Gujarati;Gujarati;Gujarati;Gudjaratu;Gujarat;del Gujarat;gudzsaráti;gujarati;gudzsaráti;Gujarati;Gujarati;Ãóäæàğàòñê.;gujarati;
 GYN;Gascony;Gascogne;Gascogne;Gaskonia;Gascuña;Guascogna;Gascogne;Gascony;Gascogne;Gascogne;Guinea;Ãàñêîíü;Gascony;
 GYN_ADJ;Gascon;Gascon;Gaskognisch;Gaskoñsk.;Gascona;Guascone;gascon;Gascon;gascon;Gasconjer;Gascon;Ãàñêîíñê.;Gascon;
 HAT;Hainaut;Hainaut;Hennegau;Hainaut;Hainaut;Annonia;Hainaut;Hainaut;Hainaut;Hainaut;Hainaut;Ãåííåãàó;Hainaut;
@@ -257,7 +256,7 @@ HKG_proletarian_dictatorship;Xianggang;Xianggang;Xianggang;Xianggang;Xianggang;X
 HKG_proletarian_dictatorship_ADJ;Xianggang;de Xianggang;Xianggang-;Xianggangsk.;de Xianggang;di Xianggang;Xianggang;Xianggang;Xianggang;Xianggang;de Xianggang;ñÿíãàíñê.;Xianggang;
 HLL;Holland;Hollande;Holland;Holandia;Holanda;Olanda;Hollandia;Holandsko;Hollandia;Holland;Holanda;Ãîëëàíäèÿ;Hollanti;
 HLL_ADJ;Dutch;Hollandais;Holländisch;Niderlandów;Holandesa;Olandese;holland;holandskı;holland;Nederlands;holandês;Ãîëëàíäñê.;hollantilainen;
-HRE;The Holy Roman Empire;Le Saint Empire Romain;Das Heilige Römische Reich;?wiête Cesarstwo Rzymskie;El Sacro Imperio Romano;Il Sacro Romano Impero;A Szent Római Birodalom;Svatá øí?e øímská;A Szent Római Birodalom;het Heilige Roomse Rijk;O Sacro Império Romano;Ñâÿùåííàÿ Ğèìñêàÿ Èìïåğèÿ;Pyhän Rooman valtakunta;
+HRE;The Holy Roman Empire;Le Saint Empire Romain;Das Heilige Römische Reich;Zwiête Cesarstwo Rzymskie;El Sacro Imperio Romano;Il Sacro Romano Impero;A Szent Római Birodalom;Svatá øí?e øímská;A Szent Római Birodalom;het Heilige Roomse Rijk;O Sacro Império Romano;Ñâÿùåííàÿ Ğèìñêàÿ Èìïåğèÿ;Pyhän Rooman valtakunta;
 HRE_ADJ;Holy Roman;Saint-Romain;Heilig' Römisch;?wiête Cesarstwo;Sacro Romano;Sacro Romana;római;Svaté øí?e øímské;római;Heilige Roomse;Sacro Romano;Ñâÿùåííûé Ğèì;Holy Roman;
 HRE_communist;Proletarian Faction;Faction Prolétarienne;Proletarische Fraktion;Frakcja proletariacka;Facción Proletaria;Fazione Proletaria;proletár frakció;Proletarian Faction;proletár frakció;proletarische Faction;Facção Proletária;Ïğîëåòàğñêàÿ Ôğàêöèÿ;proletaari Faction;
 HRE_conservative;Imperialists;Impérialistes;Imperialisten;Imperiali?ci;Imperialistas;Imperialisti;imperialisták;imperialisté;imperialisták;imperialisten;Imperialistas;Èìïåğèàëèñòû;imperialistit;
