--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -381,9 +381,9 @@ EVTDESC100080125;\n\nOur hardworking Great Leader was found dead at his chateau 
 EVTDESC8348723;\n\n$FROMCOUNTRY$ has refused exchanging their claims for anything, the Ultimatum still is in place.;;;;;;;;;;;;;
 EVTDESC83487233;\n\n$FROMCOUNTRY$ has accepted exchanging their claims in exchange for not ocupying Rhodesia, rich in metals.;;;;;;;;;;;;;
 EVTDESC83487232;\n\n$FROMCOUNTRY$ has accepted exchanging their claims in exchange for an undetermined sum of money, if it is high we may convince them.;;;;;;;;;;;;;
-EVTDESC834872321;\n\n$FROMCOUNTRY$ has accepted to give 40000Â¤ in exchange of occupying the lands claimed in the Pink Map.;;;;;;;;;;;;;
-EVTDESC834872322;\n\n$FROMCOUNTRY$ has accepted to give 60000Â¤ in exchange of occupying the lands claimed in the Pink Map.;;;;;;;;;;;;;
-EVTDESC834872323;\n\n$FROMCOUNTRY$ has accepted to give 80000Â¤ in exchange of occupying the lands claimed in the Pink Map.;;;;;;;;;;;;;
+EVTDESC834872321;\n\n$FROMCOUNTRY$ has accepted to give 40000¤ in exchange of occupying the lands claimed in the Pink Map.;;;;;;;;;;;;;
+EVTDESC834872322;\n\n$FROMCOUNTRY$ has accepted to give 60000¤ in exchange of occupying the lands claimed in the Pink Map.;;;;;;;;;;;;;
+EVTDESC834872323;\n\n$FROMCOUNTRY$ has accepted to give 80000¤ in exchange of occupying the lands claimed in the Pink Map.;;;;;;;;;;;;;
 EVTDESC834872324;\n\n$FROMCOUNTRY$ has accepted the exchange, ceding the lands claimed in the Pink Map.;;;;;;;;;;;;;
 EVTDESC834872325;\n\n$FROMCOUNTRY$ has accepted the exchange, and would cede Southern Rhodesia to us.;;;;;;;;;;;;;
 EVTDESC834872326;\n\n$FROMCOUNTRY$ has accepted the exchange, and will cede us the rest of the Pink Map.;;;;;;;;;;;;;
@@ -1372,8 +1372,8 @@ EVTDESC18490043;\n\nWe have placed Muhammad Sharif in Waddai, and they are now a
 EVTDESC184900462;\n\nThe $FROMCOUNTRY_ADJ$ have accepted sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
 EVTDESC184900463;\n\nThe $FROMCOUNTRY_ADJ$ have rejected sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
 EVTDESC184900525;\n\nUsambara has ceded Tanga to us for free.;;;;;;;;;;;;;
-EVTDESC184900526;\n\nUsambara will cede Tanga to us if we Â§Rpay 50,000Â¤Â§W.;;;;;;;;;;;;;
-EVTDESC184900527;\n\nOman has declared the 50,000Â¤ we insisted on asking in exchange for Tanga were an insult, and have declared war to annex Tanga for themselves.;;;;;;;;;;;;;
+EVTDESC184900526;\n\nUsambara will cede Tanga to us if we §Rpay 50,000¤§W.;;;;;;;;;;;;;
+EVTDESC184900527;\n\nOman has declared the 50,000¤ we insisted on asking in exchange for Tanga were an insult, and have declared war to annex Tanga for themselves.;;;;;;;;;;;;;
 EVTDESC184900528;\n\nUsambara has declared Tanga is Usambara territory, and as such it won't be cede to outside powers.;;;;;;;;;;;;;
 EVTDESC184900522;\n\nThe Omani have sent us an ultimatum -- to cede Lamu to them or to face a war of conquest.;;;;;;;;;;;;;
 EVTDESC184900523;\n\nThe Pate have accepted the treaty, and are ceding Lamu to us.;;;;;;;;;;;;;
@@ -1623,10 +1623,10 @@ EVTDESC184825032;\n\nThe $FROMCOUNTRY_ADJ$ have ceded us Laqiya Arba'in without 
 EVTDESC184825009;\n\nAfter some bloody battles against the trained Senussi troops, we have been able to pacify the Sahara.;;;;;;;;;;;;;
 EVTDESC18482504;\n\nThough the barren Sarra Triangle is a part of Libya, it is currently controlled by another power. Should we offer to purchase it?;;;;;;;;;;;;;
 EVTDESC184825041;\n\n$FROMCOUNTRY_ADJ$ diplomats have approached us with an offer to purchase the barren Sarra Triangle in southern Libya.;;;;;;;;;;;;;
-EVTDESC184825042;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have proposed selling the Sarra Triangle at a price of 50,000Â¤.;;;;;;;;;;;;;
-EVTDESC184825043;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have signed our proposed treaty to sell the Sarra Triangle at a price of 50,000Â¤.;;;;;;;;;;;;;
-EVTDESC184825044;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have proposed selling the Sarra Triangle at a price of 100,000Â¤.;;;;;;;;;;;;;
-EVTDESC184825045;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have signed our proposed treaty to sell the Sarra Triangle at a price of 100,000Â¤.;;;;;;;;;;;;;
+EVTDESC184825042;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have proposed selling the Sarra Triangle at a price of 50,000¤.;;;;;;;;;;;;;
+EVTDESC184825043;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have signed our proposed treaty to sell the Sarra Triangle at a price of 50,000¤.;;;;;;;;;;;;;
+EVTDESC184825044;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have proposed selling the Sarra Triangle at a price of 100,000¤.;;;;;;;;;;;;;
+EVTDESC184825045;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have signed our proposed treaty to sell the Sarra Triangle at a price of 100,000¤.;;;;;;;;;;;;;
 EVTDESC184825046;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have refused to enter negotiations over Sarra in spite of its lack of value.;;;;;;;;;;;;;
 EVTDESC184825047;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have refused to pay our proposed sum, calling our demands ludicrous considering the nearly worthless nature of the Sarra Triangle.;;;;;;;;;;;;;
 EVTDESC184825052;\n\nThe $FROMCOUNTRY_ADJ$ have ceded Jubaland to us.;;;;;;;;;;;;;
@@ -1639,8 +1639,8 @@ EVTDESC18482509;\n\nThe $FROMCOUNTRY_ADJ$ have started a war to conquer our king
 EVTDESC18482510;\n\nSuakin has been ruled by the Ottoman Empire since its conquest in the 16th century, and regardless of our wars with them they have not ceded it. Should we claim it?;;;;;;;;;;;;;
 EVTDESC184825101;\n\nSuakin has been under our control for centuries, but now it is encircled by the Egyptians. They have asked us to cede the territory to them.;;;;;;;;;;;;;
 EVTDESC184825102;\n\nThe $FROMCOUNTRY_ADJ$ have decided to cede Suakin once and for all.;;;;;;;;;;;;;
-EVTDESC184825103;\n\nThe $FROMCOUNTRY_ADJ$ have asked for 50,000Â¤ in exchange for ceding Suakin.;;;;;;;;;;;;;
-EVTDESC184825104;\n\nThe $FROMCOUNTRY_ADJ$ have decided to pay 50,000Â¤ so we cede Suakin once and for all.;;;;;;;;;;;;;
+EVTDESC184825103;\n\nThe $FROMCOUNTRY_ADJ$ have asked for 50,000¤ in exchange for ceding Suakin.;;;;;;;;;;;;;
+EVTDESC184825104;\n\nThe $FROMCOUNTRY_ADJ$ have decided to pay 50,000¤ so we cede Suakin once and for all.;;;;;;;;;;;;;
 EVTDESC184825105;\n\nThe $FROMCOUNTRY_ADJ$ have refused to cede Suakin.;;;;;;;;;;;;;
 EVTDESC18482511;\n\nThe $FROMCOUNTRY_ADJ$ have launched a campaign to conquer Barbara and sieged the city. Should we cede it to them?;;;;;;;;;;;;;
 EVTDESC18482512;\n\nOur King has died and Mzila and Mawewe, his two sons, have both claimed the throne. Our Empire has been divided, and a war will unite it back.;;;;;;;;;;;;;
@@ -1692,8 +1692,8 @@ EVTDESC18482544;\n\nThe $FROMCOUNTRY_ADJ$ have started a war against us to conqu
 EVTDESC18482545;\n\nZayla has been ruled by the Ottoman Empire since its conquest in the 17th century, and regardless of our wars with them they have not ceded it. Should we claim it?;;;;;;;;;;;;;
 EVTDESC184825451;\n\nZayla has been under our control for centuries, but now it is claimed by the Egyptians. They have asked us to cede the territory to them.;;;;;;;;;;;;;
 EVTDESC184825452;\n\nThe $FROMCOUNTRY_ADJ$ have decided to cede Zayla once and for all.;;;;;;;;;;;;;
-EVTDESC184825453;\n\nThe $FROMCOUNTRY_ADJ$ have asked for 50,000Â¤ in exchange for ceding Zayla.;;;;;;;;;;;;;
-EVTDESC184825454;\n\nThe $FROMCOUNTRY_ADJ$ have decided to pay 50,000Â¤ so we cede Zayla once and for all.;;;;;;;;;;;;;
+EVTDESC184825453;\n\nThe $FROMCOUNTRY_ADJ$ have asked for 50,000¤ in exchange for ceding Zayla.;;;;;;;;;;;;;
+EVTDESC184825454;\n\nThe $FROMCOUNTRY_ADJ$ have decided to pay 50,000¤ so we cede Zayla once and for all.;;;;;;;;;;;;;
 EVTDESC184825455;\n\nThe $FROMCOUNTRY_ADJ$ have refused to cede Zayla.;;;;;;;;;;;;;
 EVTDESC184825462;\n\nyeah, do check;;;;;;;;;;;;;
 EVTDESC184825467;\n\nAfter numerous battles, we've been able to beat the other Karamanli successor and reestablish our rule.;;;;;;;;;;;;;
@@ -1755,7 +1755,7 @@ EVTDESC184825705;\n\n$FROMCOUNTRY$ has managed to cede the coast of Zululand to 
 EVTDESC184825706;\n\n$FROMCOUNTRY$ has sent an ultimatum to the Nieuwe Republiek - cede the coast of Zululand or go to war - which they have had to concede.;;;;;;;;;;;;;
 EVTDESC184825707;\n\n$FROMCOUNTRY$ has sent us an ultimatum - cede back the coast of Zululand to the Nieuwe Republiek or face consequences.;;;;;;;;;;;;;
 EVTDESC184825708;\n\n$FROMCOUNTRY$ has sent us an ultimatum - cede back the coast of Zululand to the Nieuwe Republiek or face consequences.;;;;;;;;;;;;;
-EVTDESC184825714;\n\n$FROMCOUNTRY$ has agreed to let Boers settle in eMkhondo, and has taken our 30,000Â¤ in exchange.;;;;;;;;;;;;;
+EVTDESC184825714;\n\n$FROMCOUNTRY$ has agreed to let Boers settle in eMkhondo, and has taken our 30,000¤ in exchange.;;;;;;;;;;;;;
 EVTDESC184825715;\n\n$FROMCOUNTRY$ has again refused to let Boers settle in eMkhondo.;;;;;;;;;;;;;
 EVTDESC184825761;\n\nWe've been able to start the effective occupation of Dogonland.;;;;;;;;;;;;;
 EVTDESC184825771;\n\nWe've been able to start the effective occupation of Samoland.;;;;;;;;;;;;;
