--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -109,7 +109,7 @@ PROV3370;Ferlach;;;;;;;;;;;;;
 PROV3371;Mankalya;;;;;;;;;;;;;
 PROV3372;Sulina;;;;;;;;;;;;;
 PROV3373;Filibe;;;;;;;;;;;;;
-PROV3374;?abac;;;;;;;;;;;;;
+PROV3374;Šabac;;;;;;;;;;;;;
 PROV3375;Roda;;;;;;;;;;;;;
 PROV3376;Potsdam;;;;;;;;;;;;;
 PROV3377;Bunj;;;;;;;;;;;;;
@@ -1319,8 +1319,8 @@ PROV3928;Kangatosa;;;;;;;;;;;;;
 PROV3929;Pala;;;;;;;;;;;;;
 PROV3930;Sodo;;;;;;;;;;;;;
 PROV3931;Praskoveya;;;;;;;;;;;;;
-PROV3932;Po?arevac;;;;;;;;;;;;;
-PROV3933;Kru?evac;;;;;;;;;;;;;
+PROV3932;Požarevac;;;;;;;;;;;;;
+PROV3933;Kruševac;;;;;;;;;;;;;
 PROV3934;Loznica;;;;;;;;;;;;;
 PROV3935;Mitembie;;;;;;;;;;;;;
 PROV3936;Aconibe;;;;;;;;;;;;;
