--- a/GFM/localisation/00_NNM_events.csv
+++ b/GFM/localisation/00_NNM_events.csv
@@ -2,7 +2,7 @@ Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;P
 IS_IN_REGION; is in the region ;Est dans la région;Ist in der Region ;;Está en la región;;;;;;;;;
 kobu_gattai_title;Kobu Gattai;;;;;;;;;;;;;
 fukoku_kyohei;Fukoku Kyohei;;;;;;;;;;;;;
-PROV2745;Gulf of Cádiz;Golfe de Cadix;Golf von Cadiz;;Golfo de C?iz;;;;;;;;;
+PROV2745;Gulf of Cádiz;Golfe de Cadix;Golf von Cadiz;;Golfo de Cádiz;;;;;;;;;
 EVTNAME10223;Louis-Napoleon's Coup d'Etat;;;;;;;;;;;;;
 EVTDESC10223;Facing the prospect of losing the presidential election, the popular Louis-Napoleon has launched a coup d'etat and overthrown the French government. Loyal members of the army have locked down strategic locations in Paris, and the Assemblée Nationale has been dissolved, leaving Louis-Napoleon as the undisputed ruler of the country. He has been christened Napoléon III, regaining his uncle's throne as the Emperor of France.;;;;;;;;;;;;;
 EVTNAME10224;Emperor Napoleon Deposed;;;;;;;;;;;;;
@@ -12,7 +12,7 @@ EVTDESC11108;The call has gone out for the Slavic nations of the Balkans to fina
 EVTOPTA13000;We will allow the westerners into $COUNTRY$, so long as they cause no trouble.;;;;;;;;;;;;;
 EVTOPTB13000;They bring dangerous ideas. $COUNTRY$ will refuse them all access.;;;;;;;;;;;;;
 EVTNAME13010;Shipwrecked Sailors;Les naufragés;Schiffsbrüchige Matrosen;;Marineros naufragados;;;;;;;;;
-EVTDESC13010;\n\nAn old pond\nA frog jumps in ?\nThe sound of water.\n-- Matsuo Basho\n\nOne of our coastal provinces is bustling with rumors about the strange people who were found along its shorelines earlier this morning. The more precise origin of these shipwrecked sailors is as of yet uncertain, but, wherever they are from, they are definitely not from our country. The difficulty now lies in deciding what to do with them: if we send them home, we are effectively changing our policy of non-interaction with the westerners. Ignoring them and allowing them to stay, however, means permitting a western presence despite all our efforts.;;;;;;;;;;;;;
+EVTDESC13010;\n\nAn old pond\nA frog jumps in\nThe sound of water.\n-- Matsuo Basho\n\nOne of our coastal provinces is bustling with rumors about the strange people who were found along its shorelines earlier this morning. The more precise origin of these shipwrecked sailors is as of yet uncertain, but, wherever they are from, they are definitely not from our country. The difficulty now lies in deciding what to do with them: if we send them home, we are effectively changing our policy of non-interaction with the westerners. Ignoring them and allowing them to stay, however, means permitting a western presence despite all our efforts.;;;;;;;;;;;;;
 EVTOPTA13010;Send them home.;Les laisser rentrer chez eux.;Lasst sie heimkehren.;;Dejadles regresar a casa.;;;;;;;;;
 EVTOPTB13010;Allow them to stay.;Les obliger à rester.;Zwingt sie, zu bleiben.;;Obligadles a quedarse.;;;;;;;;;
 EVTNAME13015;Foreign Smugglers;Contrebandiers étrangers;Ausländische Schmuggler;;Contrabandistas extranjeros;;;;;;;;;
@@ -81,7 +81,7 @@ EVTDESC46304;\n\nParaguay has always suffered from its landlocked status in term
 EVTNAME60160;Birth of a Nation;;;;;;;;;;;;;
 EVTDESC60160; Today crowds gathered in $CAPITAL$ to celebrate $COUNTRY$'s independence. In the modern world, independence can be a fleeting thing-- so we must enjoy it while we can. Today, $COUNTRY_ADJ$ flags wave from every window and corner, and jubilant citizens sing the $COUNTRY_ADJ$ anthem. It is a heartfelt theme that speaks of better tomorrows.;;;;;;;;;;;;;
 EVTNAME80111;The Dungan Basin;;;;;;;;;;;;;
-EVTDESC80111;Now that the rebellion in distant Sinkiang is finished, there appears to be some question as to who has ownership over the Dungan basin. The western half of the basin, in Qaratal, is occupied by the wicked Russians? but they wish control over the eastern half in Kulja, as well. Should we surrender the basin peacefully, or fight for $COUNTRY_ADJ$ honor?;;;;;;;;;;;;;
+EVTDESC80111;Now that the rebellion in distant Sinkiang is finished, there appears to be some question as to who has ownership over the Dungan basin. The western half of the basin, in Qaratal, is occupied by the wicked Russians - but they wish control over the eastern half in Kulja, as well. Should we surrender the basin peacefully, or fight for $COUNTRY_ADJ$ honor?;;;;;;;;;;;;;
 EVTNAME90034;Union With Greece;;;;;;;;;;;;;
 EVTDESC90034;The time has come to unite with our Greek brothers.;;;;;;;;;;;;;
 EVTNAME95076;The January Uprising;;;;;;;;;;;;;
