--- a/GFM/localisation/0_cb_types.csv
+++ b/GFM/localisation/0_cb_types.csv
@@ -1,7 +1,7 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;Portuguese;Russian;Finnish;
 NORMAL_WAR_REMOVE_WMDS_NAME;$ORDER$War to Prevent $SECOND_COUNTRY$'s Crime Against Humanity;;;;;;;;;;;;;
-NORMAL_TOTAL_WAR_CONQUEST_NAME;$FIRST_COUNTRY$'s Total War against $SECOND_COUNTRY$;Grande Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Gr?er Krieg;Baza;Base:;Base:;Alap:;Z?ladna:;;;;;;
-NORMAL_TOTAL_WAR_TAKE_NAME;$FIRST_COUNTRY$'s Total War against $SECOND_COUNTRY$;Grande Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Gr?er Krieg;Baza;Base:;Base:;Alap:;Z?ladna:;;;;;;
+NORMAL_TOTAL_WAR_CONQUEST_NAME;$FIRST_COUNTRY$'s Total War against $SECOND_COUNTRY$;Grande Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Groﬂer Krieg;Baza;Base;Base;Alap;Velk· v·lka;;;;;;;
+NORMAL_TOTAL_WAR_TAKE_NAME;$FIRST_COUNTRY$'s Total War against $SECOND_COUNTRY$;Grande Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Groﬂer Krieg;Baza;Base;Base;Alap;Velk· v·lka;;;;;;;
 total_war_conquest;Total War of Conquest;;;;;;;;;;;;;
 total_war_conquest_short;The time has come to wipe the very idea of $RECIPIENT$ from the annals of history;;;;;;;;;;;;;
 total_war_conquest_desc;Annex the entirety of an enemy country's colony for 0 infamy.;;;;;;;;;;;;;
