--- a/GFM/localisation/FlavourMod_modifiers.csv
+++ b/GFM/localisation/FlavourMod_modifiers.csv
@@ -142,6 +142,11 @@ coffee_cycle;The Coffee Cycle;;;;;;;;;;;;;
 anglification;Anglification;;;;;;;;;;;;;
 anglification_desc;A large effort is currently underway in the Empire to encourage the use of English in everyday lives and the establishment of an 'Anglo-Indian' Identity in our subjects.;;;;;;;;;;;;;
 greater_germany;Groﬂdeutschland;;;;;;;;;;;;;
+native_american_one;Buff to Greater Native American Power;;;;;;;;;;;;;
+native_american_two;Buff to Major Native American Power;;;;;;;;;;;;;
+native_american_three;Buff to Native American Power;;;;;;;;;;;;;
+native_american_four;Buff to Native American Minor;;;;;;;;;;;;;
+native_american_five;Buff to Small Native American Minor;;;;;;;;;;;;;
 malacca_strait;The Straits of Malacca;;;;;;;;;;;;;
 brothers_war_aggressor;Brother's War;;;;;;;;;;;;;
 brothers_war_aggressor_desc;We are currently fighting a brother's war over the hegemony of our people;;;;;;;;;;;;;
