now soldier NF works for real

--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -1170,3 +1170,4 @@ nadeb;Nadëb;;;;;;;;;;;;
 mepuri;Mepuri;;;;;;;;;;;;
 tukano;Tukano;;;;;;;;;;;;
 guahibo;Guahibo;;;;;;;;;;;;
+pueblo;Pueblo;;;;;;;;;;;;
