--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2891,3 +2891,5 @@ THEYDIDITMALONES;\n\nAfter skirmishes between Argentinian local militias and our
 BANANKOROFEELSTHREATENED;\n\nBanankoro has asked us for protection, as they are feeling encroached by the expeditions of our forces in Guinea.;;;;;;;;;;;;;
 turtle_islanders;Defenders of Turtle Island;;;;;;;;;;;;;
 turtle_islanders_desc;We must move to defend from the foreign invaders that occupy our lands.;;;;;;;;;;;;;
+utian;Utian;;;;;;;;;;;;;
+dene;Dené;;;;;;;;;;;;;
